added methods to get rules and recommendations for user